--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,32 +26,31 @@
                     <div class="d-flex align-items-center mb-3 pb-1">
                       <span class="h1 fw-bold mb-0">Ron And David's GREATEST ChatBot</span>
                     </div>
+                    <h5 class="fw-normal mb-3 pb-3">login</h5>
 
-                    <h5 class="fw-normal mb-3 pb-3"><%= formTitle %></h5>
-
-                    <form action="/chatroom" method="POST">
+                    <form action="/login" method="POST">
                       <div class="form-floating mb-4">
                         <input type="email" name="email" id="logInEmail" class="form-control" placeholder="email" required maxlength="32" />
                         <label for="logInEmail" class="text-secondary">Email address</label>
                       </div>
-
                       <div class="form-floating mb-4">
                         <input type="password" name="password" id="password3" class="form-control" placeholder="Password" required maxlength="32" />
                         <label for="password3" class="text-secondary">Password</label>
                       </div>
 
-                      <% if (errorMessage) { %>
-                      <h6 class="<%= green ? 'text-success' : 'text-danger' %>"><%= errorMessage %></h6>
+                      <% if (messages.error) { %>
+                      <h6 class="<%= messages.color %>"><%= messages.error %></h6>
                       <% } %>
+
                       <div class="pt-1 mb-4">
                         <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
                       </div>
                     </form>
 
-                    <form action="<%= action %>">
-                      <p class="mb-5 pb-lg-2" style="color: #393f81">
-                        <%= (isRegister || next) ? "Already have an account?" : "Don't have an account?" %>
-                        <button type="submit" class="btn btn-link p-0" style="color: #393f81; text-decoration: none"><%= (isRegister || next) ? "Log in" : "Register" %> here</button>
+                    <form action="/newUser/register">
+                      <p class="mb-5 pb-lg-2">
+                        Don't have an account?
+                        <button type="submit" class="btn btn-link p-0" style="color: #393f81">Register here</button>
                       </p>
                     </form>
                   </div>
