--- a/views/notfound.ejs
+++ b/views/notfound.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link id="favicon" rel="icon" href="images/chat.png" type="image/x-icon" />
-    <title>404 - Page Not Found</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  </head>
+<%- include('partials/header') %>
   <body style="background-color: #66c2bab9">
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh">
       <div class="text-center">
