--- a/views/partials/top.ejs
+++ b/views/partials/top.ejs
@@ -1,5 +1,6 @@
 <%- include('header') %>
-  <body style="background-color: #66c2bab9">
-    <div class="navbar-nav m-5 mb-0">
-      <button class="nav-link me-auto text-dark border border-dark border-2 rounded p-3" data-bs-toggle="modal" data-bs-target="#modal">Who is submitting?</button>
-    </div>
+<body style="background-color: #66c2bab9">
+  <div class="navbar-nav m-5 mb-0">
+    <button class="nav-link me-auto text-dark border border-dark border-2 rounded p-3" data-bs-toggle="modal" data-bs-target="#modal">Who is submitting?</button>
+  </div>
+</body>
