--- a/views/registerPassword.ejs
+++ b/views/registerPassword.ejs
@@ -19,6 +19,7 @@
                     <button class="btn btn-info btn-lg" type="button" onclick="window.location.href='/newUser/register'">Back</button>
                     <button class="btn btn-dark btn-lg" type="submit">Sign up</button>
                   </div>
+                  <p>Already have an account?<a href="/login" class="btn btn-link p-0 ms-1" style="color: #393f81"> login here</a></p>
                 </form>
               </div>
             </div>
