--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,5 +1,8 @@
-<%- include('partials/top') %>
-<%- include('partials/spinner') %>
+<!DOCTYPE html>
+<html lang="en">
+  <%- include('partials/header') %>
+  <body style="background-color: #66c2bab9">
+    <%- include('partials/top') %> <%- include('partials/spinner') %>
     <section>
       <div class="p-5">
         <div class="container py-5 border border-dark border-2 rounded">
@@ -31,3 +34,5 @@
     <%- include('partials/modal') %>
     <script type="module" src="/javascripts/chatFunction.js"></script>
     <%- include('partials/buttom') %>
+  </body>
+</html>
