--- a/views/registerPassword.ejs
+++ b/views/registerPassword.ejs
@@ -1,34 +1,49 @@
-<%- include('partials/top') %>
-
-<%- include('partials/pageShape') %>
-                  <span class="h1 fw-bold mb-0">Almost Done...</span>
+<!DOCTYPE html>
+<html lang="en">
+  <%- include('partials/header') %>
+  <body style="background-color: #66c2bab9">
+    <%- include('partials/top') %>
+    <section>
+      <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col col-xl-10">
+            <div class="card" style="border-radius: 1rem">
+              <div class="row g-0">
+                <div class="col-md-6 col-lg-5 d-none d-md-block">
+                  <img src="/images/homepage.png" alt="Homepage Image" class="img-fluid" style="border-radius: 1rem 0 0 1rem" />
                 </div>
-                <form action="/newUser/choosePassword" method="POST">
-                  <div class="form-floating mb-4">
-                    <input type="password" name="password1" class="form-control" placeholder="Password" required maxlength="32" value="<%= det.pas1 || '' %>" />
-                    <label for="password1" class="text-secondary">Password</label>
+                <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                  <div class="card-body p-4 p-lg-5 text-black">
+                    <div class="d-flex align-items-center mb-3 pb-1">
+                      <span class="h1 fw-bold mb-0">Almost Done...</span>
+                    </div>
+                    <form action="/newUser/choosePassword" method="POST">
+                      <div class="form-floating mb-4">
+                        <input type="password" name="password1" class="form-control" placeholder="Password" required minlength="3" maxlength="32" value="<%= det.pas1 || '' %>" />
+                        <label for="password1" class="text-secondary">Password</label>
+                      </div>
+                      <div class="form-floating mb-4">
+                        <input type="password" name="password2" class="form-control" placeholder="Confirm Password" required minlength="3" maxlength="32" value="<%= det.pas2 || '' %>" />
+                        <label for="password2" class="text-secondary">Confirm Password</label>
+                      </div>
+                      <% if (messages.error) { %>
+                      <h6 class="text-danger"><%= messages.error %></h6>
+                      <% } %>
+                      <div class="d-flex justify-content-start gap-3 pt-1 mb-4">
+                        <button class="btn btn-info btn-lg" type="button" onclick="window.location.href='/newUser/register'">Back</button>
+                        <button class="btn btn-dark btn-lg" type="submit">Sign up</button>
+                      </div>
+                      <p>Already have an account?<a href="/login" class="btn btn-link p-0 ms-1" style="color: #393f81"> login here</a></p>
+                    </form>
                   </div>
-                  <div class="form-floating mb-4">
-                    <input type="password" name="password2" class="form-control" placeholder="Confirm Password" required maxlength="32" value="<%= det.pas2 || '' %>" />
-                    <label for="password2" class="text-secondary">Confirm Password</label>
-                  </div>
-                  <% if (messages.error) { %>
-                  <h6 class="text-danger"><%= messages.error %></h6>
-                  <% } %>
-                  <div class="d-flex justify-content-start gap-3 pt-1 mb-4">
-                    <button class="btn btn-info btn-lg" type="button" onclick="window.location.href='/newUser/register'">Back</button>
-                    <button class="btn btn-dark btn-lg" type="submit">Sign up</button>
-                  </div>
-                  <p>Already have an account?<a href="/login" class="btn btn-link p-0 ms-1" style="color: #393f81"> login here</a></p>
-                </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
 
-<%- include('partials/modal') %>
-<%- include('partials/buttom') %>
+    <%- include('partials/modal') %> <%- include('partials/buttom') %>
+  </body>
+</html>
