--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,43 +1,57 @@
-<%- include('partials/top') %>
-
-<%- include('partials/pageShape') %>
-                  <span class="h1 fw-bold mb-0">Ron And David's GREATEST ChatBot</span>
+<!DOCTYPE html>
+<html lang="en">
+  <%- include('partials/header') %>
+  <body style="background-color: #66c2bab9">
+    <%- include('partials/top') %>
+    <section>
+      <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col col-xl-10">
+            <div class="card" style="border-radius: 1rem">
+              <div class="row g-0">
+                <div class="col-md-6 col-lg-5 d-none d-md-block">
+                  <img src="/images/homepage.png" alt="Homepage Image" class="img-fluid" style="border-radius: 1rem 0 0 1rem" />
                 </div>
-                <h5 class="fw-normal mb-3 pb-3">login</h5>
+                <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                  <div class="card-body p-4 p-lg-5 text-black">
+                    <div class="d-flex align-items-center mb-3 pb-1">
+                      <span class="h1 fw-bold mb-0">Ron And David's GREATEST ChatBot</span>
+                    </div>
+                    <h5 class="fw-normal mb-3 pb-3">login</h5>
 
-                <form action="/login" method="POST">
-                  <div class="form-floating mb-4">
-                    <input type="email" name="email" id="logInEmail" class="form-control" placeholder="email" required maxlength="32" />
-                    <label for="logInEmail" class="text-secondary">Email address</label>
+                    <form action="/login" method="POST">
+                      <div class="form-floating mb-4">
+                        <input type="email" name="email" id="logInEmail" class="form-control" placeholder="email" required maxlength="32" />
+                        <label for="logInEmail" class="text-secondary">Email address</label>
+                      </div>
+                      <div class="form-floating mb-4">
+                        <input type="password" name="password" id="password3" class="form-control" placeholder="Password" required maxlength="32" />
+                        <label for="password3" class="text-secondary">Password</label>
+                      </div>
+
+                      <% if (messages.error) { %>
+                      <h6 class="<%= messages.color %>"><%= messages.error %></h6>
+                      <% } %>
+
+                      <div class="pt-1 mb-4">
+                        <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                      </div>
+                    </form>
+
+                    <form action="/newUser/register">
+                      <p class="mb-5 pb-lg-2">
+                        Don't have an account?
+                        <button type="submit" class="btn btn-link p-0" style="color: #393f81">Register here</button>
+                      </p>
+                    </form>
                   </div>
-                  <div class="form-floating mb-4">
-                    <input type="password" name="password" id="password3" class="form-control" placeholder="Password" required maxlength="32" />
-                    <label for="password3" class="text-secondary">Password</label>
-                  </div>
-
-                  <% if (messages.error) { %>
-                  <h6 class="<%= messages.color %>"><%= messages.error %></h6>
-                  <% } %>
-
-                  <div class="pt-1 mb-4">
-                    <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
-                  </div>
-                </form>
-
-                <form action="/newUser/register">
-                  <p class="mb-5 pb-lg-2">
-                    Don't have an account?
-                    <button type="submit" class="btn btn-link p-0" style="color: #393f81">Register here</button>
-                  </p>
-                </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
-
-<%- include('partials/modal') %>
-<%- include('partials/buttom') %>
+    </section>
+    <%- include('partials/modal') %> <%- include('partials/buttom') %>
+  </body>
+</html>
