--- a/views/notfound.ejs
+++ b/views/notfound.ejs
@@ -1,4 +1,6 @@
-<%- include('partials/header') %>
+<!DOCTYPE html>
+<html lang="en">
+  <%- include('partials/header') %>
   <body style="background-color: #66c2bab9">
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh">
       <div class="text-center">
@@ -11,6 +13,6 @@
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <%- include('partials/buttom') %>
   </body>
 </html>
