--- a/views/partials/spinner.ejs
+++ b/views/partials/spinner.ejs
@@ -1,3 +1,5 @@
-<div class="spinner-border container-fluid invisible" role="status">
+<div class="d-flex justify-content-center align-items-center vh-1">
+  <div class="spinner-border invisible" role="status">
     <span class="visually-hidden"></span>
   </div>
+</div>
