--- a/views/registerEmail.ejs
+++ b/views/registerEmail.ejs
@@ -1,39 +1,55 @@
-<%- include('partials/top') %>
+<!DOCTYPE html>
+<html lang="en">
+  <%- include('partials/header') %>
 
-<%- include('partials/pageShape') %>
-                  <span class="h1 fw-bold mb-0">Join Us!</span>
+  <body style="background-color: #66c2bab9">
+    <%- include('partials/top') %>
+    <section>
+      <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col col-xl-10">
+            <div class="card" style="border-radius: 1rem">
+              <div class="row g-0">
+                <div class="col-md-6 col-lg-5 d-none d-md-block">
+                  <img src="/images/homepage.png" alt="Homepage Image" class="img-fluid" style="border-radius: 1rem 0 0 1rem" />
                 </div>
-                <form action="/newUser/register" method="POST">
-                  <div class="form-floating mb-4">
-                    <input type="email" name="email" class="form-control" placeholder="email" required maxlength="32" value="<%= det.email %>" />
-                    <label for="floatingEmail" class="text-secondary">Email address</label>
-                    <% if (messages.error) { %>
-                    <a class="text-danger" style="text-decoration: none; font-weight: bold"><%= messages.error %></a>
+                <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                  <div class="card-body p-4 p-lg-5 text-black">
+                    <div class="d-flex align-items-center mb-3 pb-1">
+                      <span class="h1 fw-bold mb-0">Join Us!</span>
+                    </div>
+                    <form action="/newUser/register" method="POST">
+                      <div class="form-floating mb-4">
+                        <input type="email" name="email" class="form-control" placeholder="email" required maxlength="32" value="<%= det.email %>" />
+                        <label for="floatingEmail" class="text-secondary">Email address</label>
+                        <% if (messages.error) { %>
+                        <a class="text-danger" style="text-decoration: none; font-weight: bold"><%= messages.error %></a>
 
-                    <% } %>
+                        <% } %>
+                      </div>
+                      <div class="form-floating mb-4">
+                        <input type="text" name="firstName" class="form-control" placeholder="first Name" required pattern="[A-Za-z]{3,32}" maxlength="32" value="<%= det.firstName %>" />
+                        <label for="firstNameId" class="text-secondary">First Name</label>
+                      </div>
+
+                      <div class="form-floating mb-4">
+                        <input type="text" name="lastName" class="form-control" placeholder="Last Name" required pattern="[A-Za-z]{3,32}" maxlength="32" value="<%= det.lastName %>" />
+                        <label for="lastNameId" class="text-secondary">Last Name</label>
+                      </div>
+                      <div class="pt-1 mb-4">
+                        <button class="btn btn-dark btn-lg btn-block" type="submit">Next</button>
+                      </div>
+                      <p>Already have an account?<a href="/login" class="btn btn-link p-0 ms-1" style="color: #393f81"> login here</a></p>
+                    </form>
                   </div>
-                  <div class="form-floating mb-4">
-                    <input type="text" name="firstName" class="form-control" placeholder="first Name" required pattern="[A-Za-z]{3,32}" maxlength="32" value="<%= det.firstName %>" />
-                    <label for="firstNameId" class="text-secondary">First Name</label>
-                  </div>
-                  
-                  <div class="form-floating mb-4">
-                    <input type="text" name="lastName" class="form-control" placeholder="Last Name" required pattern="[A-Za-z]{3,32}" maxlength="32" value="<%= det.lastName %>" />
-                    <label for="lastNameId" class="text-secondary">Last Name</label>
-                  </div>
-                  <div class="pt-1 mb-4">
-                    <button class="btn btn-dark btn-lg btn-block" type="submit">Next</button>
-                  </div>
-                  <p>Already have an account?<a href="/login" class="btn btn-link p-0 ms-1" style="color: #393f81"> login here</a></p>
-                </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
 
-<%- include('partials/modal') %>
-<%- include('partials/buttom') %>
+    <%- include('partials/modal') %> <%- include('partials/buttom') %>
+  </body>
+</html>
